# simpleLogger

./: README.md
logAgent/: CMakeLists.txt
logAgent/include/: LogCenterShmManager.h  logCenterServer.h  logDefine.h
logAgent/src/: LogCenterShmManager.cpp  logCenterServer.cpp
logCenter/include/: logCenterControler.h  logCenterServer.h  logDefine.h
logCenter/src/: logCenterControler.cpp  logCenterServer.cpp  main.cpp
logClient/: CMakeLists.txt  loggingConstantDef.h  loggingDef.h
logClient/filterListen/: baseLogFilterListener.cpp  baseLogFilterListener.h  networkListener.cpp  networkListener.h  standAloneListener.cpp  standAloneListener.h
logClient/include/: loggingDef.h  nLogger.h
logClient/logSetting/: logFilterListener.cpp  logFilterListener.h  loggingDef.h  nLogger.cpp  nLogger.h
logClient/src/: loggingDef.cpp  nLogger.cpp
logClient/test/: test.cpp
